Resolved overflow styling issues on groomers page, finished adding in groomer bios.

--- a/ourGroomers.html
+++ b/ourGroomers.html
@@ -48,9 +48,9 @@
 							<div class="inner">
 								<div class="bio">
 									<span class="image left bioImage"><img src="images/doeA.jpg" alt="picture of Anna, owner of Hylebos Pet Grooming and Salon" /></span>
-									<div calss="bioText">
+									<div class="bioText">
 										<h3>Anna, owner & master groomer</h3>
-										<p>Born and raised in the PNW, Anna has 12 years of experience in grooming dogs and other pets. She was educated at Maser's Academy of Fine Grooming in Kenmore, and is NDGAA-certified in both non-sporting and sporting dogs.</p>
+										<p>Born and raised in the PNW, Anna has twelve years of experience in grooming dogs and other pets. She was educated at Maser's Academy of Fine Grooming in Kenmore, and is NDGAA-certified in both non-sporting and sporting dogs.</p>
 									</div>
 								</div>
 
@@ -60,7 +60,7 @@
 									<span class="image right bioImage"><img src="images/doeB2.jpg" alt="picture of John, a groomer at Hylebos Pet Grooming and Salon"/></span>
 									<div class="bioText">
 										<h3>John, groomer</h3>
-										<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
+										<p>A New York native and gradute of the American Academy of Pet Grooming, John has four years of experience grooming dogs and other pets. He loves dogs and animals of all shapes and sizes and is currently fostering three cats.</p>
 									</div>
 									
 								</div>
@@ -71,7 +71,7 @@
 									<span class="image left bioImage"><img src="images/doeC2.jpg" alt="picture of Sophia, a groomer-in-training at Hylebos Pet Grooming and Salon" /></span>
 									<div class = "bioText">
 										<h3>Sophia, grooming apprentice</h3>
-										<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
+										<p>Sophia loves dogs and learning about the different breeds and their behaviors. She's looking forward to becoming a fully-certified groomer.</p>
 									</div>
 								</div>
 							</div>
