Updated content of aboutUs.html and added fallback background-colors for the header images.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -47,7 +47,7 @@
 						<section class="wrapper style5">
 							<div class="inner">
 								<h3>We are passionate about animals and the environment</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+								<p>Motivated by stressful experiences her rescue Great Dane was having at chain facilities, Anna opened Hylebos Pet Grooming & Spa in 2015. We understand how much anxiety the grooming experience can cause your pets. We focus on providing compassionate care for your pets in a stress-free grooming environment, allowing your pets to safely roam our salon while they're here. The products we use are eco-friendly and all-natural. Services range from a classic bath and brush or dog groom to a premium spa day with hot oil treatment and a special paw massage using all natural paw balm.</p>
 							</div>
 						</section>
 
